Add user Register login enter
